<resources>
    <string name="app_name">AcitvityTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="projects">Projects</string>
    <string name="open_contacts">Open Contacts</string>
    <string name="start_animate">Start Animate</string>
    <string name="display_about_fragment">Display About Fragment</string>
    <string name="hide_about_fragment">Hide About Fragment</string>
    <string name="ubertags">Ubertags</string>
    <string-array name="projects_name">
        <item>ubertags</item>
        <item>figaro</item>
        <item>webspider</item>
    </string-array>
    <string name="title_activity_ubertags">ubertags</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="show_more">Show More</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name:</string>
    <string name="age">Age:</string>
    <string name="save_user">Save</string>
    <string name="search_user">Search</string>
    <string name="download_image">Download Image</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="swipe_refresh">Swipe Refresh</string>
    <string name="sqlite_helper">SQLite Helper</string>
    <string name="material_tabs">Material Tabs</string>
    <string name="sliding_tab">Sliding Tab</string>
    <string name="add_comment">Add Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="title_activity_material_tabs">MaterialTabsActivity</string>
    <string name="title_activity_sliding_tab">SlidingTab</string>
</resources>
