<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/profile"
        android:title="@string/profile" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/about"
        android:title="@string/about" />
    <item android:id="@+id/project"
        android:title="@string/projects" />
    <item android:id="@+id/swipe_refresh"
        android:title="@string/swipe_refresh" />
    <item android:id="@+id/view_page"
        android:title="View Page" />
    <item android:id="@+id/sqlite_helper"
        android:title="@string/sqlite_helper" />
    <item android:id="@+id/material_tab_host"
        android:title="@string/material_tabs" />
</menu>
