<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.andrewyang.acitvitytest.AboutActivity">

    <TextView
        android:id="@+id/title_of_about"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/openContacts"
        android:onClick="onClick"
        android:text="@string/open_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/startAnimate"
        android:text="@string/start_animate"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/displayAboutFragment"
        android:text="@string/display_about_fragment"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/hideAboutFragment"
        android:text="@string/hide_about_fragment"
        android:visibility="invisible"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@+id/aboutFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
